# 3.-coursework

./: .gitignore  README.md  config.py  pyproject.toml
scripts/: scripts.py
src/: main.py
tests/: test_script.py
